crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__empty_fstrings.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringEnd(
            Double,
        ),
        2..3,
    ),
    (
        String {
            value: "",
            kind: String,
            quote_kind: Double,
        },
        4..6,
    ),
    (
        FStringStart(
            Double,
        ),
        7..9,
    ),
    (
        FStringEnd(
            Double,
        ),
        9..10,
    ),
    (
        FStringStart(
            Single,
        ),
        11..13,
    ),
    (
        FStringEnd(
            Single,
        ),
        13..14,
    ),
    (
        String {
            value: "",
            kind: String,
            quote_kind: Single,
        },
        15..17,
    ),
    (
        FStringStart(
            TripleQuotedDouble,
        ),
        18..22,
    ),
    (
        FStringEnd(
            TripleQuotedDouble,
        ),
        22..25,
    ),
    (
        FStringStart(
            TripleQuotedSingle,
        ),
        26..30,
    ),
    (
        FStringEnd(
            TripleQuotedSingle,
        ),
        30..33,
    ),
    (
        Newline,
        33..33,
    ),
]
