crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__escape_unicode_name.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        String {
            value: "\\N{EN SPACE}",
            kind: String,
            quote_kind: Double,
        },
        0..14,
    ),
    (
        Newline,
        14..14,
    ),
]
