crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_comments.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            TripleQuotedDouble,
        ),
        0..4,
    ),
    (
        FStringMiddle {
            value: "\n# not a comment ",
            is_raw: false,
            quote_kind: TripleQuotedDouble,
        },
        4..21,
    ),
    (
        Lbrace,
        21..22,
    ),
    (
        Comment(
            "# comment {",
        ),
        23..34,
    ),
    (
        NonLogicalNewline,
        34..35,
    ),
    (
        Name {
            name: "x",
        },
        39..40,
    ),
    (
        NonLogicalNewline,
        40..41,
    ),
    (
        Rbrace,
        41..42,
    ),
    (
        FStringMiddle {
            value: " # not a comment\n",
            is_raw: false,
            quote_kind: TripleQuotedDouble,
        },
        42..59,
    ),
    (
        FStringEnd(
            TripleQuotedDouble,
        ),
        59..62,
    ),
    (
        Newline,
        62..62,
    ),
]
