crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_conversion.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        Lbrace,
        2..3,
    ),
    (
        Name {
            name: "x",
        },
        3..4,
    ),
    (
        Exclamation,
        4..5,
    ),
    (
        Name {
            name: "s",
        },
        5..6,
    ),
    (
        Rbrace,
        6..7,
    ),
    (
        FStringMiddle {
            value: " ",
            is_raw: false,
            quote_kind: Double,
        },
        7..8,
    ),
    (
        Lbrace,
        8..9,
    ),
    (
        Name {
            name: "x",
        },
        9..10,
    ),
    (
        Equal,
        10..11,
    ),
    (
        Exclamation,
        11..12,
    ),
    (
        Name {
            name: "r",
        },
        12..13,
    ),
    (
        Rbrace,
        13..14,
    ),
    (
        FStringMiddle {
            value: " ",
            is_raw: false,
            quote_kind: Double,
        },
        14..15,
    ),
    (
        Lbrace,
        15..16,
    ),
    (
        Name {
            name: "x",
        },
        16..17,
    ),
    (
        Colon,
        17..18,
    ),
    (
        FStringMiddle {
            value: ".3f!r",
            is_raw: false,
            quote_kind: Double,
        },
        18..23,
    ),
    (
        Rbrace,
        23..24,
    ),
    (
        FStringMiddle {
            value: " {x!r}",
            is_raw: false,
            quote_kind: Double,
        },
        24..32,
    ),
    (
        FStringEnd(
            Double,
        ),
        32..33,
    ),
    (
        Newline,
        33..33,
    ),
]
