crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_escape_braces.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Single,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "\\",
            is_raw: false,
            quote_kind: Single,
        },
        2..3,
    ),
    (
        Lbrace,
        3..4,
    ),
    (
        Name {
            name: "foo",
        },
        4..7,
    ),
    (
        Rbrace,
        7..8,
    ),
    (
        FStringEnd(
            Single,
        ),
        8..9,
    ),
    (
        FStringStart(
            Single,
        ),
        10..12,
    ),
    (
        FStringMiddle {
            value: "\\\\",
            is_raw: false,
            quote_kind: Single,
        },
        12..14,
    ),
    (
        Lbrace,
        14..15,
    ),
    (
        Name {
            name: "foo",
        },
        15..18,
    ),
    (
        Rbrace,
        18..19,
    ),
    (
        FStringEnd(
            Single,
        ),
        19..20,
    ),
    (
        FStringStart(
            Single,
        ),
        21..23,
    ),
    (
        FStringMiddle {
            value: "\\{foo}",
            is_raw: false,
            quote_kind: Single,
        },
        23..31,
    ),
    (
        FStringEnd(
            Single,
        ),
        31..32,
    ),
    (
        FStringStart(
            Single,
        ),
        33..35,
    ),
    (
        FStringMiddle {
            value: "\\\\{foo}",
            is_raw: false,
            quote_kind: Single,
        },
        35..44,
    ),
    (
        FStringEnd(
            Single,
        ),
        44..45,
    ),
    (
        Newline,
        45..45,
    ),
]
