crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_escape_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..3,
    ),
    (
        FStringMiddle {
            value: "\\",
            is_raw: true,
            quote_kind: Double,
        },
        3..4,
    ),
    (
        Lbrace,
        4..5,
    ),
    (
        Name {
            name: "x",
        },
        5..6,
    ),
    (
        Colon,
        6..7,
    ),
    (
        FStringMiddle {
            value: "\\\"\\",
            is_raw: true,
            quote_kind: Double,
        },
        7..10,
    ),
    (
        Lbrace,
        10..11,
    ),
    (
        Name {
            name: "x",
        },
        11..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        Rbrace,
        13..14,
    ),
    (
        FStringMiddle {
            value: " \\\"\\\"\\\n end",
            is_raw: true,
            quote_kind: Double,
        },
        14..25,
    ),
    (
        FStringEnd(
            Double,
        ),
        25..26,
    ),
    (
        Newline,
        26..26,
    ),
]
