crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_expression_multiline.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "first ",
            is_raw: false,
            quote_kind: Double,
        },
        2..8,
    ),
    (
        Lbrace,
        8..9,
    ),
    (
        NonLogicalNewline,
        9..10,
    ),
    (
        Name {
            name: "x",
        },
        14..15,
    ),
    (
        NonLogicalNewline,
        15..16,
    ),
    (
        Star,
        24..25,
    ),
    (
        NonLogicalNewline,
        25..26,
    ),
    (
        Name {
            name: "y",
        },
        38..39,
    ),
    (
        NonLogicalNewline,
        39..40,
    ),
    (
        Rbrace,
        40..41,
    ),
    (
        FStringMiddle {
            value: " second",
            is_raw: false,
            quote_kind: Double,
        },
        41..48,
    ),
    (
        FStringEnd(
            Double,
        ),
        48..49,
    ),
    (
        Newline,
        49..49,
    ),
]
