crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_multiline.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            TripleQuotedDouble,
        ),
        0..4,
    ),
    (
        FStringMiddle {
            value: "\nhello\n    world\n",
            is_raw: false,
            quote_kind: TripleQuotedDouble,
        },
        4..21,
    ),
    (
        FStringEnd(
            TripleQuotedDouble,
        ),
        21..24,
    ),
    (
        FStringStart(
            TripleQuotedSingle,
        ),
        25..29,
    ),
    (
        FStringMiddle {
            value: "\n    world\nhello\n",
            is_raw: false,
            quote_kind: TripleQuotedSingle,
        },
        29..46,
    ),
    (
        FStringEnd(
            TripleQuotedSingle,
        ),
        46..49,
    ),
    (
        FStringStart(
            Double,
        ),
        50..52,
    ),
    (
        FStringMiddle {
            value: "some ",
            is_raw: false,
            quote_kind: Double,
        },
        52..57,
    ),
    (
        Lbrace,
        57..58,
    ),
    (
        FStringStart(
            TripleQuotedDouble,
        ),
        58..62,
    ),
    (
        FStringMiddle {
            value: "multiline\nallowed ",
            is_raw: false,
            quote_kind: TripleQuotedDouble,
        },
        62..80,
    ),
    (
        Lbrace,
        80..81,
    ),
    (
        Name {
            name: "x",
        },
        81..82,
    ),
    (
        Rbrace,
        82..83,
    ),
    (
        FStringEnd(
            TripleQuotedDouble,
        ),
        83..86,
    ),
    (
        Rbrace,
        86..87,
    ),
    (
        FStringMiddle {
            value: " string",
            is_raw: false,
            quote_kind: Double,
        },
        87..94,
    ),
    (
        FStringEnd(
            Double,
        ),
        94..95,
    ),
    (
        Newline,
        95..95,
    ),
]
