crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_named_unicode.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..2,
    ),
    (
        FStringMiddle {
            value: "\\N{BULLET} normal \\Nope \\N",
            is_raw: false,
            quote_kind: Double,
        },
        2..28,
    ),
    (
        FStringEnd(
            Double,
        ),
        28..29,
    ),
    (
        Newline,
        29..29,
    ),
]
