crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_named_unicode_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        FStringStart(
            Double,
        ),
        0..3,
    ),
    (
        FStringMiddle {
            value: "\\N",
            is_raw: true,
            quote_kind: Double,
        },
        3..5,
    ),
    (
        Lbrace,
        5..6,
    ),
    (
        Name {
            name: "BULLET",
        },
        6..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        FStringMiddle {
            value: " normal",
            is_raw: true,
            quote_kind: Double,
        },
        13..20,
    ),
    (
        FStringEnd(
            Double,
        ),
        20..21,
    ),
    (
        Newline,
        21..21,
    ),
]
